fix: navbar blur on safari

--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,7 @@ nav {
     background-color: #080808;
     z-index: 3;
     background-color: rgba(8, 8, 8, 0);
+    -webkit-backdrop-filter: blur(20px);
     backdrop-filter: blur(20px);
 }
 nav ul li:last-child{
